[package]
name = "drone_servitor"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1", features = ["full"] }
anyhow = "1.0.102"
futures = { version = "0.3", features = ["alloc"] }
mavlink = { version = "0.18", features = ["tokio", "std", "transport-udp", "dialect-ardupilotmega"]}
serde = "1.0.228"
toml = "1.1.2"
tracing = "0.1"
tracing-subscriber = "0.3"
tracing-appender = "0.2"

